# aho-corasick-rs

./: AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
src/: lib.rs
